--- a/candidature.html
+++ b/candidature.html
@@ -14,5 +14,19 @@
 </head>
 <body>
 	
+<!-- FIXED NAVBAR -->
+	
+		<div id="header1" class="row navbar navbar-default navbar-fixed-top">
+	<div class="container-fluid">	<!-- CONTAINER 1 -->
+			<div class="col-md-1"><img id="logo" src="images/faviconM.png" alt=""></div>
+			<div class="col-md-1"><a class="menu" href="#">Gallery</a></div>
+			<div class="col-md-1"><a class="menu" href="#">Social</a></div>
+			<div class="col-md-6"><a class="menu" href="#">Contact</a></div>
+			<div class="col-md-2"><input class="form-control searchbar" type="text" placeholder="SEARCH..."></div>
+			<div class="col-md-1"><a class="menu" href="#"><i class="fa fa-user" aria-hidden="true"></i> Profile</a></div>
+	</div> 						  <!-- END CONTAINER 1 -->
+		</div>	
+<!-- END FIXED NAVBAR -->
+	
 </body>
 </html>
