--- a/candidature.html
+++ b/candidature.html
@@ -27,6 +27,20 @@
 	</div> 						  <!-- END CONTAINER 1 -->
 		</div>	
 <!-- END FIXED NAVBAR -->
+
+<!-- SLIDER -->
+
+<div id="slider">
+    <figure>
+    <img src="images/SLIDER2.jpg" width="600px" height="800px">
+    <img src="images/SLIDER1.jpg" width="600px" height="800px">
+    <img src="images/SLIDER3.1.jpg" width="600px" height="800px">
+    <img src="images/SLIDER5.jpg" width="600px" height="800px">
+    </figure>
+    </div>
+
+<!-- SLIDER --> 
+
 	
 </body>
 </html>
