creation du contenue de la page

--- a/candidature.html
+++ b/candidature.html
@@ -1,32 +1,105 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Candidature</title>
-	<link rel="icon" type="image/png" href="images/faviconC.png" />	
+	<link rel="icon" type="image/png" href="images/faviconC.png" />
 	<link rel="stylesheet" href="candidature.css">
 	<link href="https://fonts.googleapis.com/css?family=Antic|Assistant|Dancing+Script|Exo|Orbitron|Poiret+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="/Users/mc/Simplon/Font-Awesome/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/evil-icons/1.9.0/evil-icons.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Assistant|Concert+One" rel="stylesheet">
 </head>
+
 <body>
-	
-<!-- FIXED NAVBAR -->
-	
-		<div id="header1" class="row navbar navbar-default navbar-fixed-top">
+
+	<!-- FIXED NAVBAR -->
+
+	<!-- <div id="header1" class="row navbar navbar-default navbar-fixed-top">
 	<div class="container-fluid">	<!-- CONTAINER 1 -->
-			<div class="col-md-1"><img id="logo" src="images/faviconM.png" alt=""></div>
-			<div class="col-md-1"><a class="menu" href="#">Gallery</a></div>
-			<div class="col-md-1"><a class="menu" href="#">Social</a></div>
-			<div class="col-md-6"><a class="menu" href="#">Contact</a></div>
-			<div class="col-md-2"><input class="form-control searchbar" type="text" placeholder="SEARCH..."></div>
-			<div class="col-md-1"><a class="menu" href="#"><i class="fa fa-user" aria-hidden="true"></i> Profile</a></div>
-	</div> 						  <!-- END CONTAINER 1 -->
-		</div>	
-<!-- END FIXED NAVBAR -->
-	
+	<!-- <div class="col-md-1"><img id="logo" src="images/faviconM.png" alt=""></div>
+	<div class="col-md-1"><a class="menu" href="#">Gallery</a></div>
+	<div class="col-md-1"><a class="menu" href="#">Social</a></div>
+	<div class="col-md-6"><a class="menu" href="#">Contact</a></div>
+	<div class="col-md-2"><input class="form-control searchbar" type="text" placeholder="SEARCH..."></div>
+	<div class="col-md-1"><a class="menu" href="#"><i class="fa fa-user" aria-hidden="true"></i> Profile</a></div> -->
+	<!-- </div> 						  <!-- END CONTAINER 1 -->
+	<!-- </div> -->
+	<!-- END FIXED NAVBAR -->
+
+
+											<!-- début du contenue -->
+	<section>
+										<!-- début du premier bloc -->
+		<div class="content">
+			<div class="content-text">
+				<h2>Formation</h2>
+				<p>Formation courte et intensive ouverte à tous avec un métier à la clé.</p>
+				<p>De vraies compétences technique et un diplôme reconu par l'Etat (RNCP niveaux II).</p>
+			</div>
+			<div class="content-img">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/Ye8JqmnEDLo" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</div>
+		<hr class="line">
+											<!-- fin du premier bloc -->
+
+										<!-- debut deu deuxieme bloc -->
+		<div class="content">
+			<div class="content-img">
+				<img src="images/langages-web.png" alt="">
+			</div>
+			<div class="content-text">
+				<h2>Programme</h2>
+				<p>Le programme est centré dans un premier temps sur une partie front-end (ce qu'on voit à l'écran) HTML, CSS, JavaScript et ses différents frameworks, Bootstap, jQuery, Webpack, React... </p>
+				<p>Et une partie Back-end (les fonctionalités) Nodejs, Express.js. L’administration systèmes (sous Linux), la programmation d’objets connectés, la gestion de projet et la conception d’interfaces.</p>
+				<p>Les méthodes : méthodologies agiles, pair programming, Greenit...</p>
+				<p>Les outils : Git, Github, Slack, Sublime text, Elcurator.</p>
+				<p>Des ouvertures sur d’autres domaines : sécurité, environnement, intelligence artificielle, consommation collaborative, entrepreneuriat, communication, marketing... Autant de sujets qui pourront donner lieu à des interventions, sur votre demande notamment.</p>
+			</div>
+		</div>
+		<hr class="line">
+									<!-- fin du deuxieme bloc -->
+
+								<!-- debut du troisieme bloc -->
+		<div class="content">
+			<div class="content-text">
+				<h2>Profil attendu</h2>
+				<p>Nos formations s’adressent prioritairement aux personnes éloignées de l’emploi (jeunes de moins de 25 ans, peu ou pas diplômées, issues des quartiers populaires et des milieux ruraux, demandeurs d’emplois de longue durée, seniors, personnes en situation de handicap, personnes réfugiées), et sont ouvertes sur critères sociaux et avec un objectif de parité hommes-femmes mais sans aucun pré-requis technique (débutants acceptés).</p>
+				<p> En revanche, il est obligatoire d’avoir une très forte MOTIVATION, une appétence forte pour le numérique et d’aimer travailler en équipe !</p>
+			</div>
+			<div class="content-img">
+				<img src="images/simploniens-web.png" id="student" alt="">
+			</div>
+		</div>
+		<hr class="line">
+									<!-- fin du troisieme bloc  -->
+
+									<!-- debut du quatrieme bloc -->
+		<div class="content">
+			<div class="content-img">
+				<img src="images/ateliers.png" alt="">
+			</div>
+			<div class="content-text">
+				<h2>Ateliers</h2>
+				<p>Venez découvrir le Web avec les Ateliers Découvertes menés par des apprenant.e.s Simplon.</p>
+				<p>Vous comprendrez ce qui se cache derrière votre écran et comment créer des sites internet, vous apprivoiserez un CMS comme WordPress pour comprendre comment faire une page web sans coder, vous découvrirez les bases de la logique de programmation avec Scratch, et pleins d'autres surprises...</p>
+			</div>
+		</div>
+		<hr class="line">
+									<!-- fin du quatrieme bloc -->
+
+									<!-- bouton de candidature -->
+		<div class="macaron">
+			<a href="http://simplon.co/je-candidate/" target="_blank"><img src="images/macaron_candidat.png" alt="">
+			</a>
+		</div>
+									<!-- bouton de candidature -->
+	</section>
+									<!-- fin du contenue -->
 </body>
 </html>
