--- a/candidature.html
+++ b/candidature.html
@@ -32,9 +32,9 @@
 	<!-- END FIXED NAVBAR -->
 
 
-											<!-- début du contenue -->
+<!-- BLOCKS -->
 	<section>
-										<!-- début du premier bloc -->
+<!-- BLOCK 1 -->
 		<div class="content">
 			<div class="content-text">
 				<h2>Formation</h2>
@@ -46,9 +46,9 @@
 			</div>
 		</div>
 		<hr class="line">
-											<!-- fin du premier bloc -->
+<!-- END BLOCK 1 -->
 
-										<!-- debut deu deuxieme bloc -->
+<!-- BLOCK 2 -->
 		<div class="content">
 			<div class="content-img">
 				<img src="images/langages-web.png" alt="">
@@ -63,9 +63,9 @@
 			</div>
 		</div>
 		<hr class="line">
-									<!-- fin du deuxieme bloc -->
+<!-- END BLOCK 2 -->
 
-								<!-- debut du troisieme bloc -->
+<!-- BLOCK 3 -->
 		<div class="content">
 			<div class="content-text">
 				<h2>Profil attendu</h2>
@@ -77,9 +77,9 @@
 			</div>
 		</div>
 		<hr class="line">
-									<!-- fin du troisieme bloc  -->
+<!-- END BLOCK 3	  -->
 
-									<!-- debut du quatrieme bloc -->
+<!-- BLOCK 4	 -->
 		<div class="content">
 			<div class="content-img">
 				<img src="images/ateliers.png" alt="">
@@ -91,15 +91,15 @@
 			</div>
 		</div>
 		<hr class="line">
-									<!-- fin du quatrieme bloc -->
+<!-- END BLOCK 4 -->
 
-									<!-- bouton de candidature -->
+<!-- BLOCK 5 -->
 		<div class="macaron">
 			<a href="http://simplon.co/je-candidate/" target="_blank"><img src="images/macaron_candidat.png" alt="">
 			</a>
 		</div>
-									<!-- bouton de candidature -->
+<!-- END BLOCK 5 -->
 	</section>
-									<!-- fin du contenue -->
+<!-- END BLOCKS -->
 </body>
 </html>
