--- a/candidature.html
+++ b/candidature.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-
+<!-- HEAD -->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Candidature</title>
-	<link rel="icon" type="image/png" href="images/faviconC.png" />
-	<link rel="stylesheet" href="candidature.css">
+		<title>Candidature</title>
+		<link rel="icon" type="image/png" href="images/faviconC.png" />
+		<link rel="stylesheet" href="candidature.css">
 	<link href="https://fonts.googleapis.com/css?family=Antic|Assistant|Dancing+Script|Exo|Orbitron|Poiret+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="/Users/mc/Simplon/Font-Awesome/css/font-awesome.min.css">
@@ -14,23 +14,22 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/evil-icons/1.9.0/evil-icons.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Assistant|Concert+One" rel="stylesheet">
 </head>
-
+<!-- END HEAD -->
 <body>
 
-	<!-- FIXED NAVBAR -->
+<!-- FIXED NAVBAR -->
 
-	<!-- <div id="header1" class="row navbar navbar-default navbar-fixed-top">
-	<div class="container-fluid">	<!-- CONTAINER 1 -->
-	<!-- <div class="col-md-1"><img id="logo" src="images/faviconM.png" alt=""></div>
-	<div class="col-md-1"><a class="menu" href="#">Gallery</a></div>
-	<div class="col-md-1"><a class="menu" href="#">Social</a></div>
-	<div class="col-md-6"><a class="menu" href="#">Contact</a></div>
-	<div class="col-md-2"><input class="form-control searchbar" type="text" placeholder="SEARCH..."></div>
-	<div class="col-md-1"><a class="menu" href="#"><i class="fa fa-user" aria-hidden="true"></i> Profile</a></div> -->
-	<!-- </div> 						  <!-- END CONTAINER 1 -->
-	<!-- </div> -->
-	<!-- END FIXED NAVBAR -->
-
+	<div id="header1" class="row navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">	<!-- CONTAINER 1 -->
+			<div class="col-md-1"><img id="logo" src="images/faviconM.png" alt=""></div>
+			<div class="col-md-1"><a class="menu" href="#">Gallery</a></div>
+			<div class="col-md-1"><a class="menu" href="#">Social</a></div>
+			<div class="col-md-6"><a class="menu" href="#">Contact</a></div>
+			<div class="col-md-2"><input class="form-control searchbar" type="text" placeholder="SEARCH..."></div>
+			<div class="col-md-1"><a class="menu" href="#"><i class="fa fa-user" aria-hidden="true"></i> Profile</a></div>
+		</div> 					       <!-- END CONTAINER 1 -->
+	</div>
+<!-- END FIXED NAVBAR -->
 
 <!-- BLOCKS -->
 	<section>
