--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Candidature</title>
 		<link rel="icon" type="image/png" href="images/faviconC.png" />
-		<link rel="stylesheet" href="candidature.css">
+		<link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Antic|Assistant|Dancing+Script|Exo|Orbitron|Poiret+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="/Users/mc/Simplon/Font-Awesome/css/font-awesome.min.css">
